# furo

./: CMakeLists.txt  README.md
src/: Boolean.h  Byte.h  ByteByteMap.h  ByteByteOperator.h  ByteDelay.c  ByteDelay.h  ByteDrop.c  ByteDrop.h  ByteFilter.c  ByteFilter.h  ByteLast.c  ByteLast.h  ByteListener.c  ByteListener.h  ByteListenerInternal.h  ByteListernerManager.h  ByteMapTo.c  ByteMapTo.h  ByteObservable.h  ByteProducer.h  ByteProducerFromArray.h  ByteProducerInternal.h  ByteProducerPeriodic.c  ByteProducerPeriodic.h  ByteSample.c  ByteSample.h  ByteStream.c  ByteStream.h  ByteStreamTimer.h  ByteSubscription.h  ByteTake.c  ByteTake.h  Rivulet.h  RivuletArray.c  RivuletArray.h  RivuletDelay.c  RivuletDelay.h  RivuletDrop.c  RivuletDrop.h  RivuletEmpty.c  (+57 more)
test/: ByteStreamTimer.c  RivuletTimer.c  main.c
